--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lfr-modern-alert-themelet",
   "version": "0.0.3",
-  "description": "A slight variation of Bootstrap 3 alerts.",
+  "description": "A slight variation of Bootstrap alerts.",
   "keywords": [
     "liferay-theme"
   ],
@@ -9,7 +9,14 @@
     "src"
   ],
   "liferayTheme": {
+    "screenshot": "https://raw.githubusercontent.com/Robert-Frampton/lfr-modern-alert-themelet/master/screenshot.png",
     "themelet": true,
-    "version": "7.0"
+    "version": [
+      "6.2",
+      "7.0"
+    ]
+  },
+  "publishConfig": {
+    "tag": "7_0_x"
   }
 }
